--- a/Partyguard_iOS/Base.lproj/Main.storyboard
+++ b/Partyguard_iOS/Base.lproj/Main.storyboard
@@ -773,7 +773,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Jdy-sI-Bp2" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2199" y="-1292.25"/>
+            <point key="canvasLocation" x="1719" y="-1568.25"/>
         </scene>
         <!--Profile-->
         <scene sceneID="K39-un-uMP">
@@ -792,7 +792,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="WPS-Aa-kdJ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3162" y="-2056.5"/>
+            <point key="canvasLocation" x="2233.5" y="-2263.5"/>
         </scene>
         <!--Guard Tab View Controller-->
         <scene sceneID="dsf-qD-rt5">
@@ -811,7 +811,7 @@
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="jKt-4k-5VN" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="625.5" y="-2051.25"/>
+            <point key="canvasLocation" x="-489" y="-1433.25"/>
         </scene>
         <!--Guard History Table View Controller-->
         <scene sceneID="Hr2-yU-l28">
@@ -862,7 +862,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="eZ7-I4-QiX" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2199" y="-2130"/>
+            <point key="canvasLocation" x="1377" y="-2307"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="UmR-o3-plT">
@@ -945,7 +945,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="UoU-mG-iF4" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="352.5" y="-1193.25"/>
+            <point key="canvasLocation" x="223.5" y="-1044.75"/>
         </scene>
         <!--Host Login View Controller-->
         <scene sceneID="YYU-6y-1W9">
@@ -986,6 +986,7 @@
                                     <rect key="frame" x="48" y="321" width="283" height="43"/>
                                 </variation>
                                 <connections>
+                                    <action selector="loginAction:" destination="YFx-cD-O1Z" eventType="touchUpInside" id="aPE-jH-EkC"/>
                                     <segue destination="UJP-sb-odK" kind="show" id="YAN-kk-ZSD"/>
                                 </connections>
                             </button>
@@ -1805,7 +1806,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="3eq-TI-eTi" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-422" y="1827"/>
+            <point key="canvasLocation" x="1632" y="1473"/>
         </scene>
         <!--PG Team-->
         <scene sceneID="qJP-dx-fym">
@@ -1953,7 +1954,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="TkB-Gh-0e9" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3462" y="184"/>
+            <point key="canvasLocation" x="3576" y="-447.75"/>
         </scene>
         <!--Host Tab View Controller-->
         <scene sceneID="fUN-no-Wc3">
@@ -1966,14 +1967,14 @@
                     </tabBar>
                     <connections>
                         <segue destination="Bwo-cr-5xJ" kind="relationship" relationship="viewControllers" id="wPr-Df-8Ld"/>
-                        <segue destination="Ggx-BH-ahW" kind="relationship" relationship="viewControllers" id="WVh-8G-DxY"/>
-                        <segue destination="GCd-Lu-yq5" kind="relationship" relationship="viewControllers" id="EYh-eF-p51"/>
-                        <segue destination="5gP-s4-eq0" kind="relationship" relationship="viewControllers" id="rLy-Ha-BET"/>
+                        <segue destination="uNA-rn-kXt" kind="relationship" relationship="viewControllers" id="WUX-2o-Iq1"/>
+                        <segue destination="7vC-rH-qzP" kind="relationship" relationship="viewControllers" id="bpR-LC-zL7"/>
+                        <segue destination="jhx-bt-ceE" kind="relationship" relationship="viewControllers" id="7Qq-Ww-Nx0"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="6lV-tG-wqe" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2661" y="478.5"/>
+            <point key="canvasLocation" x="-528" y="-2320.5"/>
         </scene>
         <!--PartyGuard-->
         <scene sceneID="Lti-6a-Tez">
@@ -2163,7 +2164,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="jDV-z8-ct0" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-849" y="-1176.75"/>
+            <point key="canvasLocation" x="-1011" y="-896.25"/>
         </scene>
         <!--History-->
         <scene sceneID="Hah-Pj-1ep">
@@ -2182,7 +2183,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="cUe-Fi-ehT" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1281" y="-2130"/>
+            <point key="canvasLocation" x="585" y="-2311.5"/>
         </scene>
         <!--Alerts-->
         <scene sceneID="Scj-V4-wlX">
@@ -2201,7 +2202,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4go-V6-jmq" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1281" y="-1292.25"/>
+            <point key="canvasLocation" x="663" y="-1485.75"/>
         </scene>
     </scenes>
     <resources>
@@ -2216,10 +2217,13 @@
         <image name="User Groups-25.png" width="25" height="25"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="F8K-Rt-GP4"/>
-        <segue reference="mG2-be-2cl"/>
+        <segue reference="srY-tB-llc"/>
         <segue reference="os5-A4-NsS"/>
-        <segue reference="K63-H4-hkl"/>
+        <segue reference="vE6-kw-Kn6"/>
+        <segue reference="bpR-LC-zL7"/>
+        <segue reference="7Qq-Ww-Nx0"/>
+        <segue reference="WUX-2o-Iq1"/>
+        <segue reference="mG2-be-2cl"/>
     </inferredMetricsTieBreakers>
     <color key="tintColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="calibratedRGB"/>
 </document>
