--- a/Partyguard_iOS/Base.lproj/Main.storyboard
+++ b/Partyguard_iOS/Base.lproj/Main.storyboard
@@ -16,6 +16,7 @@
                         <viewControllerLayoutGuide type="bottom" id="KCI-cK-wSC"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="TrK-zx-7x0">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Gender Neutral User-50.png" translatesAutoresizingMaskIntoConstraints="NO" id="Knb-KT-tjs">
@@ -217,7 +218,7 @@
                                     <segue destination="VtK-M8-lpT" kind="show" id="K63-H4-hkl"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UPU-fk-vhx">
+                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UPU-fk-vhx">
                                 <rect key="frame" x="44" y="442" width="307" height="38"/>
                                 <color key="backgroundColor" red="1" green="0.80000001190000003" blue="0.40000000600000002" alpha="1" colorSpace="calibratedRGB"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="20"/>
@@ -909,6 +910,7 @@
                         <viewControllerLayoutGuide type="bottom" id="hOS-sP-ERF"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="fOG-6k-3pg">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Gender Neutral User-50.png" translatesAutoresizingMaskIntoConstraints="NO" id="Sg6-fX-b8L">
@@ -2149,7 +2151,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="TkB-Gh-0e9" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3552" y="-982.5"/>
+            <point key="canvasLocation" x="4374" y="-1474.5"/>
         </scene>
         <!--Host Tab View Controller-->
         <scene sceneID="fUN-no-Wc3">
@@ -2161,10 +2163,10 @@
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     </tabBar>
                     <connections>
-                        <segue destination="Bwo-cr-5xJ" kind="relationship" relationship="viewControllers" id="wPr-Df-8Ld"/>
                         <segue destination="uNA-rn-kXt" kind="relationship" relationship="viewControllers" id="WUX-2o-Iq1"/>
                         <segue destination="7vC-rH-qzP" kind="relationship" relationship="viewControllers" id="bpR-LC-zL7"/>
                         <segue destination="jhx-bt-ceE" kind="relationship" relationship="viewControllers" id="7Qq-Ww-Nx0"/>
+                        <segue destination="K93-tY-4D0" kind="relationship" relationship="viewControllers" id="PYP-Ia-W5g"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="6lV-tG-wqe" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -2208,6 +2210,116 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4go-V6-jmq" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="663" y="-1485.75"/>
+        </scene>
+        <!--Team Collection View Controller-->
+        <scene sceneID="G6r-1r-g1r">
+            <objects>
+                <collectionViewController id="ozf-4G-ZVg" customClass="PGTeamCollectionViewController" customModule="Partyguard_iOS" customModuleProvider="target" sceneMemberID="viewController">
+                    <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="O31-0G-bBn">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="oPc-5g-tUR">
+                            <size key="itemSize" width="187" height="235"/>
+                            <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                            <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                            <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                        </collectionViewFlowLayout>
+                        <cells>
+                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="pgcell" id="ye9-Dc-e8w" customClass="GuardCell" customModule="Partyguard_iOS" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="0.0" width="187" height="235"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                    <rect key="frame" x="0.0" y="0.0" width="187" height="235"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="DC.png" translatesAutoresizingMaskIntoConstraints="NO" id="JQg-mQ-bBu">
+                                            <rect key="frame" x="0.0" y="0.0" width="240" height="128"/>
+                                            <variation key="heightClass=regular-widthClass=compact" fixedFrame="YES">
+                                                <rect key="frame" x="4" y="8" width="179" height="131"/>
+                                            </variation>
+                                        </imageView>
+                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8fP-y2-Yjv">
+                                            <rect key="frame" x="-23" y="-15" width="46" height="30"/>
+                                            <state key="normal" title="View"/>
+                                            <variation key="heightClass=regular-widthClass=compact" fixedFrame="YES">
+                                                <rect key="frame" x="36" y="153" width="105" height="30"/>
+                                            </variation>
+                                        </button>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="hello" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LH7-IL-Ugw">
+                                            <rect key="frame" x="-42" y="-21" width="42" height="21"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                            <nil key="highlightedColor"/>
+                                            <variation key="heightClass=regular-widthClass=compact" fixedFrame="YES">
+                                                <rect key="frame" x="128" y="26" width="42" height="21"/>
+                                            </variation>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Robert" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VTy-3A-Oz7">
+                                            <rect key="frame" x="-42" y="-21" width="42" height="21"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                            <nil key="highlightedColor"/>
+                                            <variation key="heightClass=regular-widthClass=compact" fixedFrame="YES">
+                                                <rect key="frame" x="58" y="199" width="71" height="21"/>
+                                            </variation>
+                                        </label>
+                                    </subviews>
+                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                </view>
+                                <variation key="default">
+                                    <mask key="subviews">
+                                        <exclude reference="JQg-mQ-bBu"/>
+                                        <exclude reference="8fP-y2-Yjv"/>
+                                        <exclude reference="LH7-IL-Ugw"/>
+                                        <exclude reference="VTy-3A-Oz7"/>
+                                    </mask>
+                                </variation>
+                                <variation key="heightClass=regular-widthClass=compact">
+                                    <mask key="subviews">
+                                        <include reference="JQg-mQ-bBu"/>
+                                        <include reference="8fP-y2-Yjv"/>
+                                        <include reference="LH7-IL-Ugw"/>
+                                        <include reference="VTy-3A-Oz7"/>
+                                    </mask>
+                                </variation>
+                                <connections>
+                                    <outlet property="guardImage" destination="JQg-mQ-bBu" id="29a-8n-D8S"/>
+                                    <outlet property="guardNameLabel" destination="VTy-3A-Oz7" id="I7A-Vt-UYd"/>
+                                    <outlet property="guardViewButton" destination="8fP-y2-Yjv" id="Ze6-in-ZnQ"/>
+                                    <outlet property="onlineSymbol" destination="LH7-IL-Ugw" id="NZx-dN-zb2"/>
+                                </connections>
+                            </collectionViewCell>
+                        </cells>
+                        <connections>
+                            <outlet property="dataSource" destination="ozf-4G-ZVg" id="0zQ-PU-E7S"/>
+                            <outlet property="delegate" destination="ozf-4G-ZVg" id="ZaG-fI-eBE"/>
+                        </connections>
+                    </collectionView>
+                    <navigationItem key="navigationItem" id="Iws-0k-rhd"/>
+                </collectionViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Nz8-5a-wTU" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="4042.5" y="-1929.75"/>
+        </scene>
+        <!--PG Team-->
+        <scene sceneID="Ikh-QO-ffb">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="K93-tY-4D0" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="PG Team" image="User Groups-25.png" id="pXX-aR-x3P"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="4u9-Ri-kZ8">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="ozf-4G-ZVg" kind="relationship" relationship="rootViewController" id="LcP-bT-auN"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="gYW-0u-eTG" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3124.5" y="-1929.75"/>
         </scene>
     </scenes>
     <resources>
